# football-predictions-ai

./: .env.example  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/database/: connection.py  models.py
backend/app/models/: competition.py
src/collectors/: base_collector.py  football_data.py
